Add more example for model checking
Signed-off-by: David MENTRE <d.mentre@fr.merce.mee.com>

--- a/D2.4/formal_design.tex
+++ b/D2.4/formal_design.tex
@@ -59,7 +59,8 @@ However model checking suffers from state explosion problem: if the
 model is not properly designed, it can have too many states and make
 the exhaustive verification impossible.
 
-Example of such approaches are SCADE or Petri Nets.
+Example of such approaches and tools are SCADE, Petri Nets, NuSMV,
+UPPAAL or SPIN.
 
 \subsection{Static analysis of software code}
 
