Add David Mentré as co-author to D2.4
Signed-off-by: David MENTRE <d.mentre@fr.merce.mee.com>

--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -30,8 +30,11 @@
 
 \author{Marielle Petit-Doche}
 \affiliation{Systerel}
-  
-  
+
+
+\author{David Mentré}
+\affiliation{Mitsubishi Electric R\&D Centre Europe}
+
 % define the coverart
 \coverart[width=350pt]{chart}
 
